# docs/swagger.json
@@ -459,8 +459,20 @@
                             "$ref": "#/definitions/views.User"
                         }
                     },
+                    "400": {
+                        "description": "Invalid data",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrorResponse"
+                        }
+                    },
                     "401": {
                         "description": "No token",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "No Permission",
                         "schema": {
                             "$ref": "#/definitions/views.ErrorResponse"
                         }
@@ -472,7 +484,7 @@
                         }
                     },
                     "500": {
-                        "description": "Couldn't Get user",
+                        "description": "Couldn't get roles",
                         "schema": {
                             "$ref": "#/definitions/views.ErrorResponse"
                         }
